fix: forsaken buttons on mobile

--- a/src/photos/styles/photoList.styl
+++ b/src/photos/styles/photoList.styl
@@ -1,5 +1,11 @@
 @require 'cozy-ui'
 
+.c-btn
+    @extend $button
+
+.c-btn--secondary
+    @extend $button--secondary
+
 :local
 
     .pho-section
